<resources>
    <string name="app_name">Photos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">uPhotos</string>
    <string name="nav_header_subtitle">(C) 2023</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_photos">Photos</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_search">Search</string>
    <string name="menu_results">Results</string>

    <string-array name="tagChoiceArray">
        <item>Location</item>
        <item>Person</item>
    </string-array>

    <string-array name="conjunctionChoiceArray">
        <item>And</item>
        <item>Or</item>
    </string-array>
</resources>