<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.photos.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_photos"
            app:destination="@id/nav_photos" />
    </fragment>
    <fragment
        android:id="@+id/nav_photos"
        android:name="com.example.photos.ui.photos.PhotosFragment"
        android:label="@string/menu_photos"
        tools:layout="@layout/fragment_photos" >
        <action
            android:id="@+id/action_nav_photos_to_nav_slideshow"
            app:destination="@id/nav_slideshow" />
    </fragment>
    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.photos.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.photos.ui.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_nav_search_to_nav_results"
            app:destination="@id/nav_results" />
    </fragment>
    <fragment
        android:id="@+id/nav_results"
        android:name="com.example.photos.ui.results.ResultsFragment"
        android:label="@string/menu_results"
        tools:layout="@layout/fragment_results" />


</navigation>